fix horizontal scroll of entire page

--- a/renderServer/components/common/app.module.scss
+++ b/renderServer/components/common/app.module.scss
@@ -5,6 +5,6 @@
 }
 .bodybackground {
   background-color: #e9ecef;
-  border: 1px solid #e2e5e8;
+  border-top: 1px solid #e2e5e8;
   width: 100vw;
 }
